--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "keywords": [],
     "main": "src/index.js",
     "dependencies": {
+        "miragejs": "^0.1.41",
         "react": "17.0.2",
         "react-dom": "17.0.2",
         "react-hook-form": "7.11.1",
